# ClangGraphDB

./: .env.bak  .geminiignore  .gitignore  BUILDING.md  CHANGELOG.md  GEMINI.md  GRAPHDB_OVERVIEW.md  Makefile  README.md  UX_DESIGN_OVERVIEW.md  go.mod  go.sum  test_overview.cypher
.gemini/: system.md
plans/: 00_MASTER_ROADMAP.md  03-19-2026-feedback.md  03_PHASE_3_7_RPG_REMEDIATION.md  09_CAMPAIGNS_7-11_PLAN.md  10_CAMPAIGN_D3_VISUALIZER.md  10_PHASE_1_HTTP_SERVER_TASKS.md  11.6_CAMPAIGN_STATE_DRIVEN_NAMING.md  11_CAMPAIGN_11_FEATHERS_REMEDIATION.md  12_CAMPAIGN_D3_VISUALIZER.md  13_CAMPAIGN_D3_VISUALIZER_UX.md  13_CAMPAIGN_D3_VISUALIZER_UX_TASKS.md  16_CAMPAIGN_CRITICAL_UX_RESCUE.md  3.7_implementation_tasks.md  3.8_implementation_tasks.md  AUDIT_REPORT.md  DOMAIN_K_SIZING.md  RPG_GAP_ANALYSIS.md  bugfix_auto_plate_visibility.md  campaign_3_7_fix_recreation_resolution_discovery.md  campaign_3_9_unknown_domain_fix.md  feat_add_end_line.md  feat_cpp_parser_bugfix.md  feat_custom_llm_support.md  feat_file_logging.md  feat_fix_build_all_import.md  feat_flexible_domain_discovery.md  feat_global_discovery.md  feat_llm_concurrency.md  feat_precalc_embeddings.md  feat_query_limits_and_summary.md  feat_smart_domain_discovery.md  fix_csharp_parser_id_collision.md  fix_domain_and_contamination_architecture.md  fix_domain_clustering_quality.md  fix_domain_naming_case_mismatch.md  (+11 more)
tools/clang-extractor/: CMakeLists.txt
tools/clang-extractor/src/: ASTExtractor.cpp  ASTExtractor.h  IncludeTracker.cpp  IncludeTracker.h  JSONLWriter.cpp  JSONLWriter.h  main.cpp
(+281 files in other folders)
